[gd_scene load_steps=12 format=3 uid="uid://cekh8l0dfej46"]

[ext_resource type="Script" uid="uid://co4pusgm0dh16" path="res://Scripts/Enemy_card.gd" id="1_24hgw"]
[ext_resource type="Texture2D" uid="uid://dccu85osvlr6w" path="res://Assets/CardImages/BackMano3.png" id="2_24hgw"]
[ext_resource type="Texture2D" uid="uid://l3fn21vjinjd" path="res://Assets Collezione/HighlightBorderSoffuso ALT.png" id="3_24hgw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24hgw"]
size = Vector2(150, 208)

[sub_resource type="Animation" id="Animation_yjknr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Health:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardBack:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardBack:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardImage:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardImage:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_shj4v"]
resource_name = "card_flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Attack:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Health:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardBack:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardBack:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, -1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardImage:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardImage:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_un83n"]
resource_name = "card_flip_to_facedown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_visible_facedown"
}]
}

[sub_resource type="Animation" id="Animation_ib2ev"]
resource_name = "card_flip_to_faceup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_visible_faceup"
}]
}

[sub_resource type="Animation" id="Animation_v6u3e"]
resource_name = "card_rotate_pos_to_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 0.0]
}

[sub_resource type="Animation" id="Animation_24hgw"]
resource_name = "card_rotate_pos_to_def"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sx4i5"]
_data = {
&"RESET": SubResource("Animation_yjknr"),
&"card_flip": SubResource("Animation_shj4v"),
&"card_flip_to_facedown": SubResource("Animation_un83n"),
&"card_flip_to_faceup": SubResource("Animation_ib2ev"),
&"card_rotate_pos_to_attack": SubResource("Animation_v6u3e"),
&"card_rotate_pos_to_def": SubResource("Animation_24hgw")
}

[node name="Card" type="Node2D"]
position = Vector2(100, 120)
script = ExtResource("1_24hgw")

[node name="CardBack" type="Sprite2D" parent="."]
texture = ExtResource("2_24hgw")

[node name="CardImage" type="Sprite2D" parent="."]
z_index = -1

[node name="DebuffIconsContainer" type="VBoxContainer" parent="."]
offset_left = 25.0
offset_top = -60.0
offset_right = 65.0
offset_bottom = -20.0
scale = Vector2(1.5, 1.5)
mouse_filter = 2

[node name="DebuffIcon" type="Sprite2D" parent="DebuffIconsContainer"]

[node name="TalentIconsContainer" type="HBoxContainer" parent="."]
offset_left = -59.0
offset_top = 36.0
offset_right = 61.0
offset_bottom = 76.0
mouse_filter = 2
alignment = 1

[node name="TalentIcon" type="Sprite2D" parent="TalentIconsContainer"]
z_index = 3

[node name="Attack" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 0)
offset_left = -283.0
offset_top = 140.0
offset_right = -243.0
offset_bottom = 180.0
scale = Vector2(5, 5)
mouse_filter = 2
text = "0"
horizontal_alignment = 1

[node name="Health" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 0)
offset_left = 91.0
offset_top = 140.0
offset_right = 127.0
offset_bottom = 180.0
scale = Vector2(5, 5)
mouse_filter = 2
text = "0"
autowrap_mode = 0
horizontal_alignment = 1

[node name="SpellMultiplier" type="RichTextLabel" parent="."]
offset_left = 37.0
offset_top = 37.0
offset_right = 77.0
offset_bottom = 77.0
scale = Vector2(0.6, 0.6)
mouse_filter = 2

[node name="SpellDuration" type="RichTextLabel" parent="."]
offset_left = 52.0
offset_top = 75.0
offset_right = 92.0
offset_bottom = 115.0
scale = Vector2(0.6, 0.6)
mouse_filter = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 84
collision_mask = 84

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_24hgw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sx4i5")
}

[node name="HighlightBorder" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.882353)
z_index = -2
position = Vector2(0, 4)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_24hgw")

[node name="RedHighlightBorder" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.882353)
self_modulate = Color(1, 0.247059, 0.188235, 1)
z_index = -2
position = Vector2(0, 3)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_24hgw")

[node name="ActionBorder" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.882353)
self_modulate = Color(1, 0.763233, 0.482936, 1)
z_index = -3
position = Vector2(0, 4)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_24hgw")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
